--- a/src/component/home/home.scss
+++ b/src/component/home/home.scss
@@ -1,7 +1,8 @@
 .home {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 100vh 100vh;
+	display: grid;
+	grid-template-columns: 1fr;
+	grid-template-rows: 100vh 100vh;
+	grid-gap: 10px;
 }
 
 @media (min-width: 576px) {
@@ -13,10 +14,12 @@
 
 // Large devices (desktops, 992px and up)
 @media (min-width: 992px) {
-    .home {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-    }
+	.home {
+		display: grid;
+		grid-template-columns: repeat(2, 1fr);
+		grid-gap: 10px;
+		grid-template-rows: 100vh;
+	}
 }
 
 // Extra large devices (large desktops, 1200px and up)
